# claude-code-statusline

./: .coderabbit.yaml  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md  renovate.json
.claude/hooks/: user_prompt_submit.py
.github/workflows/: ci.yml  release.yml
.serena/: project.yml
crates/beacon-cli/: Cargo.toml
crates/beacon-cli/src/: lib.rs
crates/beacon-core/: Cargo.toml
crates/beacon-core/benches/: engine_bench.rs
crates/beacon-core/src/: config.rs  debug.rs  engine.rs  error.rs  lib.rs  messages.rs  parser.rs  style.rs  timeout.rs
crates/beacon-core/src/modules/: claude_model.rs  directory.rs  git_branch.rs  git_status.rs  mod.rs
crates/beacon-core/src/types/: claude.rs  config.rs  context.rs
crates/claude-code-statusline-cli/: Cargo.toml  README.md
crates/claude-code-statusline-cli/src/: lib.rs
crates/claude-code-statusline-cli/tests/: cli_subcommands.rs  docs_smoke.rs  error_handling.rs  integration_smoke.rs  integration_timeout.rs  preset_pastel_powerline.rs  preset_pure_prompt.rs
crates/claude-code-statusline-cli/tests/common/: mod.rs
crates/claude-code-statusline-core/: Cargo.toml  README.md
crates/claude-code-statusline-core/benches/: engine_bench.rs
crates/claude-code-statusline-core/src/: config.rs  debug.rs  engine.rs  lib.rs  messages.rs  parser.rs  style.rs  timeout.rs
crates/claude-code-statusline-core/src/modules/: directory.rs  registry.rs
crates/claude-code-statusline-core/src/types/: config.rs  mod.rs
crates/claude-code-statusline-core/tests/: engine_api.rs
crates/test-support/: Cargo.toml
crates/test-support/src/: builders.rs  cli.rs  fixtures.rs  lib.rs
crates/test-support/src/common/: builders.rs  cli.rs  fixtures.rs
docs/: configuration.md  development.md  note.md  plan.md  prompts.md  refactoring-phase1.md  spec.md  statusline.md  todo-phase1.md  todo-refactoring-phase1.md  todo.md
docs/init/: 01_spec.md  02_roadmap.md  03_tasks-phase-2.md  03_tasks-phase-3.md  todo-phase1.md
docs/init/archive/: plan.md  todo-phase1.md
docs/presets/: pastel_powerline.md  pure_prompt.md  tokyo_night.md
docs/prompts/: coderabbit-unresolved-review-workflow.md
hooks/: pre-commit.sh
scripts/: bench_check.py  check_ansi.sh  get-coderabbit-unresolved-reviews.sh  post-addressed-to-review-comment.sh
specs/: project.md
specs/2025-08-18-mvp/: 01-spec.md  02-plan.md  03-task.md  03-tasks.md
specs/2025-08-18-mvp/archive/: 03_tasks-phase-3.md
specs/2025-09-04-mvp/: 02-plan.md
specs/2025-09-04-mvp/archive/: removed-features.md
specs/2025-09-04-refactoring/: 01-spac.md  01-spec.md  03-task.md
specs/2025-09-05-style-bg-fg-color-tokens/: 01-spec.md
specs/2025-09-08-publish-2-crate-plan/: 01-spec.md  03-task.md
src/: config.rs  debug.rs  engine.rs  lib.rs  main.rs  messages.rs  parser.rs  style.rs  timeout.rs  types.rs
src/modules/: character.rs  claude_model.rs  directory.rs  git_branch.rs  git_status.rs  mod.rs
src/types/: claude.rs  config.rs  context.rs  mod.rs
tests/: cli_subcommands.rs  docs_smoke.rs  engine_api.rs  error_handling.rs  integration_smoke.rs  integration_timeout.rs  preset_pastel_powerline.rs  preset_pure_prompt.rs
tests/common/: builders.rs  cli.rs  fixtures.rs  mod.rs
