[package]
name = "beacon"
version = "0.0.1"
edition = "2024"
description = "A lightweight status line generator for Claude Code"

[workspace]
resolver = "2"
members = [
    "crates/beacon-core",
    "crates/beacon-cli",
]

[dependencies]
anyhow = "1.0.99"
atty = "0.2.14"
clap = { version = "4.5.45", features = ["derive"] }
dirs = "6.0.0"
git2 = "0.20.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
toml = "0.9.5"

# Shim depends on core for re-exports
beacon-core = { path = "crates/beacon-core" }
beacon-cli = { path = "crates/beacon-cli" }

[dev-dependencies]
rstest = "0.26.1"
strip-ansi-escapes = "0.2.1"
tempfile = "3.21.0"
assert_cmd = "2.0.16"
predicates = "3.1.3"
