[package]
name = "claude-code-statusline"
version = "0.0.1"
edition = "2024"
description = "A lightweight status line generator for Claude Code"

[workspace]
resolver = "2"
members = [
    "crates/claude-code-statusline-core",
    "crates/claude-code-statusline-cli",
    "crates/test-support",
]

[dependencies]
anyhow = "1.0.99"
atty = "0.2.14"
clap = { version = "4.5.45", features = ["derive"] }
dirs = "6.0.0"
git2 = "0.20.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
toml = "0.9.5"

# Shim depends on core for re-exports
claude-code-statusline-core = { path = "crates/claude-code-statusline-core" }
claude-code-statusline-cli = { path = "crates/claude-code-statusline-cli" }

[dev-dependencies]
rstest = "0.26.1"
strip-ansi-escapes = "0.2.1"
tempfile = "3.21.0"
assert_cmd = "2.0.16"
predicates = "3.1.3"
regex = "1.10.6"
