[package]
name = "beacon-cli"
version = "0.0.1"
edition = "2024"

[dependencies]
beacon-core = { path = "../beacon-core", features = ["git"] }
clap = { version = "4.5.45", features = ["derive"] }
anyhow = "1.0.99"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
dirs = "6.0.0"
toml = "0.9.5"

[[bin]]
name = "beacon"
path = "src/main.rs"
