[package]
name = "beacon-core"
version = "0.0.1"
edition = "2024"
description = "Core library for Beacon: public API, types, and modules"

[lib]
name = "beacon_core"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.99"
dirs = "6.0.0"
git2 = "0.20.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
toml = "0.9.5"

[dev-dependencies]
rstest = "0.26.1"
strip-ansi-escapes = "0.2.1"
tempfile = "3.21.0"
