[package]
name = "claude-code-statusline-cli"
version = "0.0.1"
edition = "2024"
description = "CLI for claude-code-statusline: reads JSON on stdin and prints ANSI-formatted status line"
license = "MIT"
repository = "https://github.com/sotayamashita/claude-code-statusline"
rust-version = "1.85"
readme = "README.md"
keywords = ["statusline", "cli", "developer-tools"]
categories = ["command-line-utilities"]
include = ["src/**", "README.md", "LICENSE*"]

[dependencies]
claude-code-statusline-core = { version = "0.0.1", path = "../claude-code-statusline-core", features = ["git"] }
clap = { version = "4.5.45", features = ["derive"] }
anyhow = "1.0.99"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
dirs = "6.0.0"
toml = "0.9.5"

[[bin]]
name = "claude-code-statusline"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
tempfile = "3.21.0"
regex = "1.10.6"
rstest = "0.26.1"
git2 = "0.20.2"
test-support = { path = "../test-support" }
